# Stencil-Kokkos-OpenMP

./: .gitignore  CMakeLists.txt  Makefile  README.MD  gaussianNoise.cpp  notes_cuda_kokkos  stencil_base.cpp  stencil_kokkos.cpp  stencil_kokkos_cpu.cpp  stencil_kokkos_gpu.cpp  stencil_omp.cpp
